feat(auth): implementa login con JWT y manejo de excepciones globales
- Configura seguridad con Spring Security y filtros JWT
- Implementa proveedor y filtro de tokens JWT
- Agrega DTOs de login y respuesta de autenticación
- Implementa servicio de aplicación para autenticación
- Agrega excepciones personalizadas para credenciales inválidas y cuenta inactiva
- Configura manejador global de excepciones